# kronos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  client.c  inject_includes.cmake  library.h  port_table_test.c  server.c  test_app.c
bench/: bench_client.c  bench_common.h  bench_http_echo.c  bench_multi.c  bench_quic_echo.c  bench_server.c  bench_stats.c  bench_tcp_echo.c  bench_udp_echo.c
demo/: demo_client.c  demo_server.c
include/: kronos.h  kronos_ack.h  kronos_array.h  kronos_client.h  kronos_congestion.h  kronos_error.h  kronos_fragment.h  kronos_log.h  kronos_math.h  kronos_network.h  kronos_packet_counter.h  kronos_platform.h  kronos_port_table.h  kronos_server.h  kronos_stats.h
internal/: _kronos_internal.h  ack_internal.h  array_internal.h  client_internal.h  congestion_internal.h  connection_map_internal.h  fragment_internal.h  frame_body.h  frame_builder_internal.h  frame_header.h  frame_metadata.h  iocp_internal.h  kronos_internal.h  message_pool_internal.h  message_queue_internal.h  net_send_internal.h  network_internal.h  packet_counter_internal.h  port_table_internal.h  server_internal.h  win_iocp.h
src/ack/: ack_tracker.c
src/congestion/: congestion_controller.c
src/connection/client/: client_connection.c
src/connection/network/: address_lifecycle.c  address_operations.c  net_send.c  udp_socket_ref_lifecycle.c  wsa_lifecycle.c
src/connection/server/: connection_map.c  endpoint_lifecycle.c  iocp_io_thread.c  iocp_lifecycle.c  message_handler.c  message_pool.c  message_queue.c  retransmit_thread.c  server_broadcast.c  server_callbacks.c  server_connection_handler.c  server_port_manager_lifecycle.c  server_port_manager_validation.c  socket_handler_lifecycle.c  socket_handler_lifecycle_win.c
src/error/: error_messages.c
src/frame/: fragment.c  frame_builder.c  frame_content.c  frame_lifecycle.c  frame_utility.c  frame_version.c
src/lib/: port_table_lifecycle.c
src/lib/array/: array_lifecycle.c  array_operations.c
src/lib/port_table/: link_hash_port_index.c  port_table_interaction.c  port_table_lifecycle.c  port_table_manipulation.c
src/log/: logging.c
src/math/: bitmask.c  kronos_math.h  uint_conversion.c
src/packet/: packet_counter.c
test/: main_test.c  port_table_test.c  test_ack.c  test_address_compare.c  test_array.c  test_broadcast_reliable.c  test_congestion.c  test_connection.c  test_connection_map_tombstones.c  test_disconnect_callback.c  test_disconnect_multi_channel.c  test_fragment.c  test_frame.c  test_integration.c  test_message_handler.c  test_message_pool.c  test_message_queue.c  test_packet_counter.c  test_race_disconnect_send.c  test_subscribe.c  test_wsa_lifecycle.c
test/mocks/: malloc_wrapper.c  malloc_wrapper.h
tests/: main_test.c  port_table_test.c
tools/lossy_proxy/: lossy_proxy.c
